# 2DAM

./: README.md
AED/ejercicio-1-evaluacion-aed/: README.md  pom.xml
AED/ejerciciosTarea18_09/: README.md
AED/ejercicios_typescript/: package-lock.json  package.json
AED/hotel-puerto/: classpath:hotel_puerto.db  memory:hotel_puerto?cache=share  pom.xml
AED/objetos-practica-starter/: pom.xml
AED/spring-data-orm/: pom.xml
AED/spring-rest/: pom.xml
AED/spring-rest-producto/: pom.xml
AED/tarea18_09/: README.md
AED/tarea19_09/: README.md
AED/tarea2_php_ficheros/: README.md  ejercicio01.php  ejercicio02.php  resultado.csv
AED/tarea_php-ficheros/: README.md  adjetivos.txt  comidas.txt  datos.json  datos_numericos.txt  diario.txt  ejercicio02.php  ejercicio03.php  ejercicio04.php  ejercicio05.php  ejercicio06.php  ejercicio07.php  ejercicio08.php  ejercicio09.php  ejercicio10.php  ejercicio11.php  ejercicio12.php  (+13 more)
DAD/: .gitignore  cifrado_ASCII_shift_guillermo_sicilia.dart  cifrado_morse_guillermo_sicilia.dart  ejercicios_basicos_manejo_errores_guillermo_sicilia.dart  ejercicios_manejo_errores_guillermo_sicilia.dart
PGL/unbroken/: README.md  main.py  pyproject.toml
PGL/unbroken/__MACOSX/: ._README.md
PGL/unbroken/__MACOSX/front/app/: ._api.ts
PGL/unbroken/front/: app.json  package-lock.json  package.json
PGL/unbroken/front/app/: api.ts  index.tsx  login.tsx
PGL/unbroken/front/app/habit/: [hid].tsx
PGL/unbroken/src/: auth.py  dependencies.py  models.py  services.py  storage.py
PGL/unbroken/tests/: conftest.py  test_auth.py  test_habits.py
(+1030 files in other folders)
